--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/OfferAtFamiliesPlace.cshtml
@@ -23,7 +23,7 @@
                             if (Model.ValidationValid == false)
                             {
                                 <p class="govuk-error-message">
-                                    <span class="govuk-visually-hidden">Error:</span> You must select one or more options
+                                    <span class="govuk-visually-hidden">Error:</span> You must select one option
                                 </p>
                             }
                         }
