--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/TypeOfService.cshtml
@@ -8,39 +8,39 @@
 <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-
-        <fieldset class="govuk-fieldset">
-            <h1 class="govuk-heading-m">
-                Select the support you offer
-            </h1>
-           
             <form method="post">
+                <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+                            <h1 class="govuk-fieldset__heading">
+                                Select the support you offer
+                            </h1>
+                        </legend>
 
-                <input asp-for="@Model.StrOrganisationViewModel" type="hidden" >
+                        <div class="govuk-form-group">
+                            <div id="type-hint" class="govuk-hint">
+                                Select all that apply.
+                            </div>
+                            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+                                @foreach (var item in @Model.OpenReferralTaxonomyRecords)
+                                {
+                                    <div class="govuk-checkboxes__item">
+                                        <input class="govuk-checkboxes__input" id="@item.Name.ToLower().Replace(" ", "")" name="TaxonomySelection" type="checkbox" value="@item.Id" @(Model.TaxonomySelection != null && Model.TaxonomySelection.Any(x => x == item.Id) ? "checked" : "")> <!--aria-controls="baby-classes-conditional"!-->
+                                        <label class="govuk-label govuk-checkboxes__label" for="@item.Name.ToLower().Replace(" ", "")">
+                                            @item.Name
+                                        </label>
+                                    </div>
 
-            <div class="govuk-form-group">
-            <div id="type-hint" class="govuk-hint">
-                Select all that apply.
-            </div>
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-                @foreach(var item in @Model.OpenReferralTaxonomyRecords)
-                {
-                    <div class="govuk-checkboxes__item">
-                        <input class="govuk-checkboxes__input" id="@item.Name.ToLower().Replace(" ", "")" name="TaxonomySelection" type="checkbox" value="@item.Id" @(Model.TaxonomySelection != null && Model.TaxonomySelection.Any(x=>x==item.Id) ? "checked" : "")> <!--aria-controls="baby-classes-conditional"!-->
-                        <label class="govuk-label govuk-checkboxes__label" for="@item.Name.ToLower().Replace(" ", "")">
-                            @item.Name
-                        </label>
-                    </div>
-                                
-                }
-            </div>
-            </div>
+                                }
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
 
-            <button type="submit" class="govuk-button">
-            Continue
-            </button>
-        </form>
-        </fieldset>
+                <button type="submit" class="govuk-button">
+                    Continue
+                </button>
+            </form>
         </div>
     </div>
 </main>
