--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceName.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ServiceName.cshtml
@@ -16,20 +16,18 @@
                                 What is the name of the service?
                             </h1>
                         </legend>
+                        @*<span asp-validation-for="@Model.ServiceName" class="govuk-error-message"></span>*@
 
-                        @{
-                            if (Model.ValidationValid == false)
-                            {
-                                <p class="govuk-error-message">
-                                    <span class="govuk-visually-hidden">Error:</span> You must enter a service name
-                                </p>
-                            }
+                        @if (Model.ValidationValid == false)
+                        {
+                            <p class="govuk-error-message">
+                                <span class="govuk-visually-hidden">Error:</span> You must enter a service name
+                            </p>
                         }
 
                         <input asp-for="@Model.StrOrganisationViewModel" type="hidden">
-
                         <div class="govuk-form-group">
-                            <input class="govuk-input @(Model.ValidationValid == false ? "govuk-input--error" : "")" id="ServiceName" name="ServiceName" value="@Model.ServiceName" type="text" maxlength="255">
+                            <input class="govuk-input @(Model.ValidationValid == false ? "govuk-input--error" : "")" asp-for="@Model.ServiceName" type="text" maxlength="255" />
                         </div>
                     </fieldset>
                 </div>
